kubernetes/apps/downloads/jdownloader/jdownloader-deploy.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: jdownloader
  namespace: downloads
spec:
  serviceName: jdownloader
  replicas: 1
  selector:
    matchLabels:
      name: jdownloader
  template:
    metadata:
      labels:
        name: jdownloader
    spec:
      automountServiceAccountToken: false
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      volumes:
        - name: jdownloader-volume
          persistentVolumeClaim:
            claimName: jdownloader-volume-pvc
        - name: download-volume
          persistentVolumeClaim:
            claimName: jdownloader-downloads-pvc
      containers:
        - name: jdownloader
          image: jlesage/jdownloader-2:v23.06.1
          ports:
            - containerPort: 5800
          volumeMounts:
            - name: jdownloader-volume
              mountPath: /config
            - name: download-volume
              mountPath: /output
          securityContext:
            allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: jdownloader
  namespace: downloads
spec:
  ports:
    - name: webui
      port: 5800
      protocol: TCP
      targetPort: 5800
  selector:
    name: jdownloader
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-issuer
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  name: jdownloader-ingress
  namespace: downloads
spec:
  ingressClassName: nginx-external
  rules:
    - host: jdownloader.${DOMAIN_NAME}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jdownloader
                port:
                  name: webui
